[package]
name = "livestream-rs"
version = "0.2.3"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
ffmpeg-sys-next = { version = "8.0.1", default-features = false, features = ["avcodec", "avformat"] }
minio = "0.3.0"
prost = "0.14.3"
tokio = { version = "1.49.0", features = ["full"] }
tonic = "0.14.5"
tonic-prost = "0.14.5"
tokio-stream = "0.1.18"
regex = "1.12.3"
rml_rtmp = "0.8.0"
bytes = "1.11.1"
tempfile = "3.26.0"
config = "0.15.19"
serde = { version = "1.0.228", features = ["derive"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "registry"] }
tracing-opentelemetry = "0.32.1"
opentelemetry = { version = "0.31.0", features = ["trace", "metrics", "logs"] }
opentelemetry_sdk = { version = "0.31.0", features = ["trace", "metrics", "logs"] }
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic", "trace", "metrics", "logs", "internal-logs"] }
opentelemetry-appender-tracing = "0.31.1"
retry = "2.2.0"

[build-dependencies]
tonic-prost-build = "0.14.5"
