[package]
name = "livestream-rs"
version = "0.2.3"
edition = "2024"

[features]
default = ["opentelemetry"]
opentelemetry = [
	"dep:opentelemetry",
	"dep:opentelemetry_sdk",
	"dep:opentelemetry-otlp",
	"dep:opentelemetry-appender-tracing",
	"dep:tracing-opentelemetry",
]

[dependencies]
anyhow = "1.0.102"
ffmpeg-sys-next = { version = "8.1.0", default-features = false, features = ["avcodec", "avformat"] }
minio = "0.3.0"
prost = "0.14.3"
tokio = { version = "1.50.0", default-features = false, features = ["rt"] }
tonic = "0.14.5"
tonic-prost = "0.14.5"
regex = "1.12.3"
rml_rtmp = "0.8.0"
bytes = "1.11.1"
tempfile = "3.27.0"
config = "0.15.22"
serde = { version = "1.0.228", features = ["derive"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "registry"] }
tracing-opentelemetry = { version = "0.32.1", optional = true }
opentelemetry = { version = "0.31.0", features = ["trace", "metrics", "logs"], optional = true }
opentelemetry_sdk = { version = "0.31.0", features = ["trace", "metrics", "logs"], optional = true }
opentelemetry-otlp = { version = "0.31.1", features = ["grpc-tonic", "trace", "metrics", "logs", "internal-logs"], optional = true }
opentelemetry-appender-tracing = { version = "0.31.1", optional = true }
retry = "2.2.0"
dashmap = "6.1.0"
tokio-util = { version = "0.7.18", features = ["full"] }
crossfire = { version = "3.1.7", features = ["tokio"] }
async-trait = "0.1.89"
async-stream = "0.3.6"

[build-dependencies]
tonic-prost-build = "0.14.5"
